--- a/src/components/Signup.css
+++ b/src/components/Signup.css
@@ -13,7 +13,7 @@
     position: relative;
     width: 100vw;
     height: 100vh;
-    background: url("https://images.pexels.com/photos/1670977/pexels-photo-1670977.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2")
+    background: url("https://cdn.pixabay.com/photo/2024/12/20/14/16/network-9280283_1280.png")
     center center/cover no-repeat;
     display: flex;
     justify-content: center;
